web/src/styles/PlacePanel.scss
@import "~bootstrap/scss/bootstrap-grid";
@import "~bootstrap/scss/mixins/breakpoints";

.place-panel {
  z-index: 1000;
  background-color: white;
  border-radius: 10px 10px 0 0;
  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);

  position: absolute;
  bottom: 0;
  left: 50%;
  height: 100px;

  /** Mobile width **/
  margin-left: -47.5%;
  width: 95%;

  /** Desktop width **/
  @include media-breakpoint-up(md) {
    width: 30%;
    margin-left: -15%;
  }

  .scrolling-panel {
    position: absolute;
    top: 65px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    overflow-y: scroll;
    overscroll-behavior: none;
  }
}

.place-header {
  padding: 10px;

  .wrap-text {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }

  .place-name {
    font-size: 18px;
    margin-bottom: 0;
  }

  .place-address {
    margin-bottom: 0;
  }

  .place-icon {
    margin-top: 5px;
    margin-right: 10px;
    float: right
  }
}

.risk-indicator {
  .risk-text {
    font-size: 14px;
    font-weight: 600;
    color: white;
    text-align: center;
    padding: 3px;
  }
}

.place-reviews-list {
  padding-top: 10px;
  padding-bottom: 30px;

  .no-reviews {
    text-align: center;
    font-size: 14px;
  }

  .place-review {
    text-align: center;
    margin: 10px 20px;
    padding: 5px;

    border-radius: 10px;
    box-shadow: 0px 0px 3px 1px #dcdcdc;

    .review-time {
      font-size: 14px;
      font-weight: 500;
      margin-bottom: 0;
    }

    .review-text {
      margin-bottom: 0;
    }
  }
}

.place-ratings-overview {
  padding-top: 5px;
  padding-bottom: 20px;

  .category-button {
    font-size: 12px;
    margin: 10px 0;
    height: 20px;
    padding: 0.1rem 0.1rem 1.2rem 0.1rem;
  }

  .category-buttons {
    border-radius: 10px;
    box-shadow: 0px 0px 3px 1px #dcdcdc;

    padding-top: 8px;
    padding-bottom: 8px;
  }

  .category-rating-panel {
    height: 100%;
    width: 90%;
    padding: 10px;

    border-radius: 10px;
    box-shadow: 0px 0px 3px 1px #dcdcdc;

    .category-rating {
      font-weight: 800;
    }

    .rating-message {
      font-size: 14px;
      margin-bottom: 5px;
    }

    .check-icon {
      margin-right: 5px;
    }

    .dining-type {
      font-size: 14px;
      margin-bottom: 0;
    }
  }
}

